# Object-Oriented-Numerical-Modeling

cs5201-final/: CMakeLists.txt  DimensionError.h  Final.dia  GaussianElimination.h  LowerTriangularMatrix.h  LowerTriangularMatrix.hpp  MatrixBase.h  PDEsolver.h  PDEsolver.hpp  QRdecomp.h  QRdecomp.hpp  QRsolver.h  QRsolver.hpp  README.txt  RectangularMatrix.h  RectangularMatrix.hpp  TriangularMatrix.h  TriangularMatrix.hpp  Vector.h  Vector.hpp  driver.cpp  makefile
hw6/: AMatrix.h  Dense_Gauss.h  Dense_Gauss.hpp  Dense_Matrix.h  Dense_Matrix.hpp  Diagonal_Matrix.h  Diagonal_Matrix.hpp  LowerTriangular_Matrix.h  LowerTriangular_Matrix.hpp  QRdecomp.h  QRdecomp.hpp  SymmetricDense_Matrix.h  SymmetricDense_Matrix.hpp  TestMatrices.txt  Tridiagonal_Gauss.h  Tridiagonal_Gauss.hpp  Tridiagonal_Matrix.h  Tridiagonal_Matrix.hpp  UpperTriangular_Matrix.h  UpperTriangular_Matrix.hpp  Vector.h  Vector.hpp  data.txt  depend  driver  driver.cpp  hw6.dia  makefile
